Fix Browser Support and Flexbox Gap in Safari

--- a/css/queries.css
+++ b/css/queries.css
@@ -126,7 +126,9 @@ rem and em do NOT depend on thml font-size in media queries! Instead, 1rem = 1 e
     }
 
     .main-nav {
-        background-color: rgba(247, 247, 247, 0.959);
+        background-color: rgba(247, 247, 247, 0.6);
+        -webkit-backdrop-filter: blur(18px);
+        backdrop-filter: blur(18px);
         position: absolute;
         top: 0;
         left: 0;
@@ -285,3 +287,56 @@ rem and em do NOT depend on thml font-size in media queries! Instead, 1rem = 1 e
 - Spacing system (px)
 2 / 4 / 8 / 12 / 16 / 24 / 32 / 48 / 64 / 80 / 96 / 128
 */
+
+/******************************/
+/* Fixing Safari flexbox gap */
+/******************************/
+
+.no-flexbox-gap .main-nav-list li:not(:last-child) {
+    margin-right: 4.8rem;
+}
+
+.no-flexbox-gap .list-item:not(:last-child) {
+    margin-bottom: 1.6rem;
+}
+
+.no-flexbox-gap .list-icon:not(:last-child) {
+    margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .delivered-faces {
+    margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .meal-attribute:not(:last-child) {
+    margin-bottom: 2rem;
+}
+
+.no-flexbox-gap .meal-icon {
+    margin-right: 1.6rem;
+}
+
+.no-flexbox-gap .footer-row div:not(:last-child) {
+    margin-right: 6.4rem;
+}
+
+.no-flexbox-gap .social-links li:not(:last-child) {
+    margin-right: 2.4rem;
+}
+
+.no-flexbox-gap .footer-nav li:not(:last-child) {
+    margin-bottom: 2.4rem;
+}
+
+@media (max-width: 75em) {
+    .no-flexbox-gap .main-nav-list li:not(:last-child) {
+        margin-right: 3.2rem;
+    }
+}
+
+@media (max-width: 59em) {
+    .no-flexbox-gap .main-nav-list li:not(:last-child) {
+        margin-right: 0;
+        margin-bottom: 4.8rem;
+    }
+}
